--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     
-    <title>Weather Dashboard</title>
+    <title>Today's Weather</title>
 
     <style>
       .red{
@@ -26,7 +26,7 @@
 
   <body>
       <header>
-       <h1>Weather Dashboard</h1>
+       <h1>Today's Weather</h1>
       </header>
 
       <div class="container">
