card borders, color, radius.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              
           <!-- Right column -->
           <div class="col-9">
-            <h2>How is the weather today?</h2>
+            <h2 id="question-right-col">How is the weather today?</h2>
             <!-- Display current weather data from API -->
             <div id="current-fc" class = "row">
               <h2><span id="span-current-city"></span><img id="current-icon"/><span id="span-current-date"></span></h2>
